# specflow

./: .dockerignore  .env.quickstart.example  .gitignore  .gitleaks.toml  .secret-scan-exclude-paths.txt  CLAUDE.md  LICENSE  MCP_USER.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  TOKEN_ECONOMY_GUIDANCE.md  docker-compose.yml  e2e-workspace-config.example.json  specflow-init.sh
backend/: AGENTS.md  Dockerfile  conftest.py  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/agents_sandboxing/: claude_env_vars.py  os_sandbox.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: app_lifecycle.py  artifact_files.py  artifact_subdirs.py  background_jobs.py  config.py  enums.py  github_platform_secrets.py  local_identity.py  logging.py  mcp_config.py  mcp_selection.py  notifications.py  rosetta_kb.py  telemetry_context.py  telemetry_decorator.py  tool_usage.py  ttl_config.py  workspace_pool_names.py
backend/app/database/: __init__.py  dependencies.py  emulator.py  factory.py  firestore.py  interface.py  memory.py  sqlite.py  sqlite_schema.py
backend/app/examples/: parallel_execution_examples.py
backend/app/jobs/: scheduled_wipe.py  shutdown_interrupted_recovery.py  stuck_cleaning_recovery.py  stuck_initializing_detector.py  stuck_running_detector.py
backend/app/middleware/: auth.py  local_auth.py  logging.py
backend/app/models/: __init__.py  api_key.py
backend/app/prompts/: agents_claude_code.py  knowledge_base_agent.py  mcp_workflow_registry.py  plan_conversion_agent.py  prompt_configs.py
backend/app/schemas/: agent.py  agent_error_events.py  agent_metrics.py  deploy_context.py  estimate.py  generation_workflow_enums.py  llm_tier.py  mcp_prune_agent.py  model_token_usage.py  model_validation.py  permissions.py  planning.py  specification.py  telemetry_workflow.py  workflow_stats.py  (+3 more)
backend/scripts/: README.md  check-workspaces-to-clean.py  check_openrouter_model.py  create_firestore_indexes.py  create_generation_session_repos.py  dart-wrapper.sh  dump_claude_sdk_messages.py  ensure-android-sdk-package.sh  ensure-flutter-sdk.sh  example_test_session.py  fix_stuck_workspaces.py  flutter-wrapper.sh  github_resolve_login.py  init-mobile-sdk.sh  init_db.py  init_firestore.py  migrate_workspace_pool_key_uid.py  p10y_resolve_organisation_id.py  radon_diff_vs_main.py
backend/test/: __init__.py  test_agent_query_with_resume.py  test_agents_claude_code.py  test_all_workspaces_failed.py  test_blank_config_notifications.py  test_classify_error.py  test_claude_code_sdk_agent_metrics.py  test_claude_code_setup.py  test_commit_metadata.py  test_deploy_agent_prompt.py  test_estimation_components.py  test_execute_all_phases_connection_error.py  test_execute_all_phases_mcps.py  test_file_utils.py  test_generate_poc_steps.py  test_git_integration.py  test_json_llm_repair.py  test_kb_init_prompt.py  test_kb_init_telemetry.py  test_langfuse_tracer.py  test_mcp_config.py  test_mcp_configuration_telemetry.py  test_mcp_prune.py  test_model_catalog.py  test_model_selection.py  test_model_validation.py  test_openrouter.py  test_openrouter_models.py  test_openrouter_pricing.py  test_p10y_lib_components.py  test_parallel_execution.py  test_planning_parser_edges.py  test_planning_parser_phase_mcps.py  test_process_query_stream.py  test_providers.py  test_regression_baseline.py  test_report_generation.py  test_resolve_agent_query_cost.py  test_resume_generation.py  test_risk_model.py  (+14 more)
mcp_server/: README.md  cli.py  pyproject.toml  server.py
mcp_server/schemas/: gain_json.py  generation_workflow_enums.py  specification.py
mcp_server/services/: archive_builder.py  bundled_skills.py  cli_service.py  document_reader.py  file_sync.py  file_sync_orchestrator.py  generation_orchestrator.py  llm_tiers.py  local_env.py  retry.py  run_generation_precheck.py  server_instructions.py  session.py  specflow_backend.py  tool_helpers.py  user_response.py  validate_models.py
mcp_server/tests/: test_archive_builder.py  test_backend_contract_rejection.py  test_cli.py  test_cli_init.py  test_document_reader.py  test_ensure_gain_json.py  test_extra_deps.py  test_file_sync_orchestrator.py  test_file_sync_service.py  test_gain_json.py  test_generation_orchestrator.py  test_generation_workflow_enums.py  test_llm_tiers.py  test_local_env.py  test_retry_core.py  test_run_generation_precheck.py  test_server_phase_label.py  test_server_retry.py  test_session.py  test_specflow_backend_headers.py  test_specflow_local_tools.py  test_tool_helpers.py  test_tui_actions.py  test_tui_activity.py  test_tui_app.py  test_tui_config.py  test_tui_mcp_clients.py  test_tui_onboarding.py  test_tui_poller.py  test_tui_render.py  test_tui_stream.py  test_user_response.py  test_validate_models.py
mcp_server/tui/: __init__.py  actions.py  activity.py  app.py  config.py  constants.py  extra_deps.py  mcp_clients.py  onboarding.py  poller.py  render.py  stream.py
(+257 files in other folders)
